<resources>
    <string name="app_name">RetrofitRxJava</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="url">URL</string>
    <string name="image">image</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="about_dialog">This application displays data from the News API. Click the articles to read more!</string>
    <string name="there_was_an_error_loading_the_news">There was an error loading the news</string>
    <string name="retry">Retry</string>
    <string name="please_select_a_category">Please Select A Category</string>

    <string-array name="categories">
        <item>Top US News</item>
        <item>Technology</item>
        <item>Sports</item>
        <item>Business</item>
        <item>Health</item>
        <item>Science</item>
        <item>Entertainment</item>
    </string-array>
</resources>